gl31-master/src/test/deca/syntax/valid/hellotest/prog_backslash.deca
// Description:
//    tests de programme correct syntaxiquement pour hello-world
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 14/01/2021
{
    println("On affiche un backslash: \\");
}
