gl31-master/src/test/deca/syntax/invalid/hellotest/prog_rbracket.deca
// Description:
//    tests de programme incorrect syntaxiquement pour hello-world
//
// Resultats:
//    Ligne 10 : Erreur, ')' manquant
//
// Historique:
//    cree le 08/01/2021
{
    println("Programme incorrect";
}
